equipment schema fixed
